--- a/index.html
+++ b/index.html
@@ -1,165 +1,354 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Portfolio - @skilljava</title>
-
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>@skilljava — Portfolio</title>
 <style>
-/* ====== Global ====== */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+/* ====== Reset & Base ====== */
+:root{
+  --bg:#0b0b0b;
+  --red:#ff1a1a;
+  --muted-red: rgba(255,26,26,0.18);
+  --glass-bg: rgba(255,255,255,0.03);
+  --glass-border: rgba(255,255,255,0.06);
+  --text:#ffffff;
+  --accent:#ff4b4b;
+  --green:#21d07a;
+  --grid-white: rgba(255,255,255,0.16);
+  --grid-white-2: rgba(255,255,255,0.08);
+  --max-width: 1100px;
+}
+*{box-sizing:border-box;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
+html,body{height:100%}
+body{
+  margin:0;
+  padding:0;
+  font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+  background:var(--bg);
+  color:var(--text);
+  line-height:1.45;
+  overflow-x:hidden;
+  scroll-behavior:smooth;
 }
 
-body {
-  background: #0b0b0b;
-  font-family: Arial, sans-serif;
-  color: #fff;
-  overflow-x: hidden;
+/* ====== Layout Helpers ====== */
+.container{
+  max-width: var(--max-width);
+  margin: 0 auto;
+  padding: 40px 20px;
+}
+.full-viewport{
+  min-height: 100vh;
+  width:100%;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  position:relative;
 }
 
-/* ====== Animated Grid Background ====== */
-.bg-grid {
-  position: fixed;
-  inset: 0;
-  z-index: -1;
-  background-size: 40px 40px;
-  background-image:
-    linear-gradient(to right, rgba(255,0,0,0.15) 1px, transparent 1px),
-    linear-gradient(to bottom, rgba(255,0,0,0.15) 1px, transparent 1px);
-  animation: moveGrid 7s linear infinite;
+/* ====== HEADER ====== */
+.header{
+  position:relative;
+  width:100%;
+  height:100vh;
+  overflow:hidden;
+  display:block;
+  background: linear-gradient(180deg, rgba(20,8,8,0.76) 0%, rgba(12,6,6,0.88) 60%), linear-gradient(180deg, rgba(16,2,2,0.25), rgba(8,0,0,0.0));
+  transition: opacity 0.9s cubic-bezier(.2,.9,.2,1), transform 0.9s cubic-bezier(.2,.9,.2,1);
+}
+.header::before{
+  content:"";
+  position:absolute;
+  inset:0;
+  background: radial-gradient(circle at 30% 40%, rgba(255,20,20,0.18) 0%, rgba(0,0,0,0) 40%);
+  filter: blur(34px);
+  z-index:0;
+  pointer-events:none;
+}
+.header::after{
+  content:"";
+  position:absolute;
+  inset:0;
+  background: linear-gradient(180deg, rgba(255,20,20,0.02), rgba(0,0,0,0.12));
+  z-index:1;
+  pointer-events:none;
+}
+.canvas-wrap{
+  position:absolute;
+  inset:0;
+  z-index:2;
+  pointer-events:none;
+}
+.particle-wrap{
+  position:absolute;
+  inset:0;
+  z-index:3;
+  pointer-events:none;
+}
+.header-inner{
+  position:relative;
+  z-index:10;
+  max-width: var(--max-width);
+  margin: 0 auto;
+  height:100%;
+  display:flex;
+  align-items:center;
+  padding: 48px 28px;
+}
+.header-left{
+  width: 420px;
+  min-width: 320px;
+  margin-right: 40px;
+  display:flex;
+  flex-direction:column;
+  gap:18px;
+  transform: translate3d(-20px,0,0);
+  transition: transform 0.9s cubic-bezier(.2,.9,.2,1), opacity 0.9s cubic-bezier(.2,.9,.2,1);
+}
+.profile-glass{
+  background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+  border-radius:18px;
+  border: 1px solid var(--glass-border);
+  padding:20px;
+  backdrop-filter: blur(10px) saturate(120%);
+  box-shadow: 0 6px 30px rgba(255,10,10,0.06);
+  display:flex;
+  gap:16px;
+  align-items:center;
+  width:100%;
+}
+.avatar{
+  width:96px;
+  height:96px;
+  border-radius:12px;
+  overflow:hidden;
+  flex-shrink:0;
+  border: 3px solid rgba(255,26,26,0.9);
+  box-shadow: 0 8px 30px rgba(255,26,26,0.12), 0 2px 8px rgba(0,0,0,0.6);
+}
+.avatar img{ width:100%; height:100%; object-fit:cover; display:block; }
+.meta{
+  display:flex;
+  flex-direction:column;
+  gap:6px;
+}
+.meta .name{
+  font-size:1.55rem;
+  font-weight:700;
+  color:var(--text);
+  letter-spacing: -0.02em;
+}
+.meta .subtitle{
+  font-size:0.92rem;
+  color:rgba(255,255,255,0.72);
+}
+.badge{
+  margin-top:6px;
+  display:inline-flex;
+  align-items:center;
+  gap:10px;
+  padding:6px 10px;
+  border-radius:999px;
+  background: rgba(0,0,0,0.22);
+  border: 1px solid rgba(255,255,255,0.03);
+  color:var(--green);
+  font-weight:700;
+  font-size:0.88rem;
+  box-shadow: 0 4px 18px rgba(0,0,0,0.45);
+}
+.badge .dot{
+  width:10px; height:10px; border-radius:50%; background:var(--green);
+  box-shadow: 0 0 8px rgba(33,208,122,0.6);
+}
+.header-desc{
+  margin-top:18px;
+  color: rgba(255,255,255,0.84);
+  font-size:0.98rem;
+  background:transparent;
+  line-height:1.5;
+}
+.header-right{
+  flex:1;
+  display:flex;
+  align-items:center;
+  justify-content:flex-end;
+  padding-right:30px;
+}
+.header-deco{
+  width:360px;
+  height:240px;
+  border-radius:14px;
+  background: linear-gradient(180deg, rgba(255,255,255,0.01), rgba(255,255,255,0.02));
+  border:1px solid rgba(255,255,255,0.03);
+  backdrop-filter: blur(6px);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  color:rgba(255,255,255,0.06);
+  font-size:2.2rem;
+  transform: translateY(6px);
+}
+@media (max-width:1000px){
+  .header-left{ width:360px; min-width:260px; }
+  .header-deco{ display:none; }
+}
+@media (max-width:800px){
+  .header-inner{ flex-direction:column; align-items:flex-start; gap:20px; padding:24px; }
+  .header-right{ display:none; }
+  .header-left{ width:100%; margin-right:0; }
+  .profile-glass{ width:100%; align-items:center; }
+}
+.header--faded{
+  opacity:0;
+  transform: translateY(-22px);
+  pointer-events:none;
 }
 
-@keyframes moveGrid {
-  from { background-position: 0 0; }
-  to { background-position: 40px 40px; }
-}
-
-/* ====== Center Profile Card ====== */
-.profile-card {
-  position: relative;
-  width: 330px;
-  padding: 25px;
-  border-radius: 20px;
-  background: rgba(255, 30, 30, 0.12);
-  border: 1px solid rgba(255,255,255,0.05);
-  backdrop-filter: blur(10px);
-  margin: 60px auto 40px auto;
-  text-align: center;
-  box-shadow: 0 0 20px rgba(255,0,0,0.2);
-}
-
-.profile-card h1 {
-  font-size: 28px;
-  margin-bottom: 10px;
-}
-
-.profile-card p {
-  font-size: 14px;
-  opacity: 0.8;
-}
-
-/* ====== 4 Info Boxes ====== */
-.box-container {
-  max-width: 1100px;
-  margin: auto;
+/* ====== NAV CARDS ====== */
+.nav-cards-container {
+  position: absolute;
+  bottom: 50px;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
-  justify-content: center;
-  gap: 25px;
-  flex-wrap: wrap;
-  padding-bottom: 60px;
+  gap: 20px;
+  z-index: 20;
 }
 
-.info-box {
-  width: 230px;
-  height: 180px;
-  border-radius: 18px;
-  background: rgba(255, 20, 20, 0.15);
-  padding: 20px;
-  border: 1px solid rgba(255,255,255,0.04);
-  backdrop-filter: blur(12px);
-  transition: 0.35s;
-  cursor: default;
+.nav-card {
+  background: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255,255,255,0.1);
+  backdrop-filter: blur(8px);
+  border-radius: 14px;
+  padding: 20px 40px;
+  color: white;
+  font-weight: 600;
+  font-size: 1.2rem;
+  text-align: center;
+  transition: transform 0.3s cubic-bezier(.2,.9,.2,1), background 0.3s;
+  cursor: pointer;
 }
 
-.info-box h2 {
-  margin-bottom: 10px;
-  color: #ff4444;
-  font-size: 20px;
+.nav-card:hover {
+  transform: scale(1.4);
+  background: rgba(255, 26, 26, 0.15);
 }
 
-.info-box p {
-  font-size: 14px;
-  opacity: 0.85;
-  line-height: 1.4;
-}
-
-/* Hover: one grows, others shrink */
-.box-container:hover .info-box {
-  transform: scale(0.86);
-  opacity: 0.65;
-}
-
-.info-box:hover {
-  transform: scale(1.12) !important;
-  opacity: 1 !important;
-  background: rgba(255, 50, 50, 0.25);
+.nav-cards-container.hovered .nav-card:not(:hover) {
+  transform: scale(0.8);
+  transition: transform 0.3s cubic-bezier(.2,.9,.2,1);
 }
 </style>
 </head>
-
 <body>
 
-<div class="bg-grid"></div>
-
-<!-- Profile Card -->
-<div class="profile-card">
-  <h1>@skilljava</h1>
-  <p>Java Developer • Backend • Example Info</p>
-</div>
-
-<!-- Boxes -->
-<div class="box-container">
-
-  <div class="info-box">
-    <h2>Projects</h2>
-    <p>
-      • Example Project 1<br>
-      • Example Project 2<br>
-      • Example Project 3<br>
-    </p>
+<!-- HEADER -->
+<header id="header" class="header" aria-label="Header">
+  <div class="canvas-wrap">
+    <canvas id="gridCanvas" style="width:100%;height:100%;display:block;"></canvas>
   </div>
 
-  <div class="info-box">
-    <h2>Links</h2>
-    <p>
-      • GitHub: example<br>
-      • Discord: example#0000<br>
-      • Website: example.com
-    </p>
+  <div class="particle-wrap">
+    <canvas id="particleCanvas" style="width:100%;height:100%;display:block;"></canvas>
   </div>
 
-  <div class="info-box">
-    <h2>About Me</h2>
-    <p>
-      Java Developer<br>
-      Backend Specialist<br>
-      Loves building servers & bots
-    </p>
+  <div class="header-inner container">
+    <div class="header-left transform-gpu" id="headerLeft">
+      <div class="profile-glass" role="region" aria-label="profile">
+        <div class="avatar" aria-hidden="true">
+          <img src="https://cdn.discordapp.com/avatars/1275540868186636348/7383706214a2a719edf30d967c567f9d.png?size=1024" alt="skilljava avatar">
+        </div>
+        <div class="meta">
+          <div class="name">@skilljava</div>
+          <div class="subtitle">Java • Discord bots • Server & network development</div>
+          <div class="badge" aria-hidden="true"><span class="dot"></span><span style="opacity:0.95">Ready to accept orders</span></div>
+        </div>
+      </div>
+
+      <div class="header-desc" id="headerDesc">
+        I'm a software developer specialized in <strong>Java</strong>, <strong>Discord bot development</strong>, full-stack web projects and game server management. I build optimized, maintainable systems and enjoy improving performance and player experience.
+      </div>
+
+    </div>
+
+    <div class="header-right">
+      <div class="header-deco" aria-hidden="true"></div>
+    </div>
   </div>
 
-  <div class="info-box">
-    <h2>Contact</h2>
-    <p>
-      Email: example@mail.com<br>
-      Discord: example#0000<br>
-      Response: 1–12h
-    </p>
+  <!-- NAV CARDS -->
+  <div class="nav-cards-container">
+    <div class="nav-card">Projects</div>
+    <div class="nav-card">Links</div>
+    <div class="nav-card">About Me</div>
+    <div class="nav-card">Contact</div>
   </div>
 
-</div>
+</header>
+
+<!-- FOOTER -->
+<footer class="footer">
+  <div class="container" style="display:flex;align-items:center;justify-content:center;gap:10px">
+    <span>Coded by skilljava</span>
+  </div>
+</footer>
+
+<script>
+/* ====== ANIMATED GRID CANVAS ====== */
+
+const gridCanvas = document.getElementById("gridCanvas");
+const gc = gridCanvas.getContext("2d");
+
+function resizeGrid() {
+  gridCanvas.width = window.innerWidth;
+  gridCanvas.height = window.innerHeight;
+}
+resizeGrid();
+window.addEventListener("resize", resizeGrid);
+
+let offset = 0;
+
+function drawGrid() {
+  gc.clearRect(0, 0, gridCanvas.width, gridCanvas.height);
+
+  gc.strokeStyle = "rgba(255,255,255,0.08)";
+  gc.lineWidth = 1;
+
+  const size = 40;
+  offset += 0.15;
+
+  for (let x = -offset; x < gridCanvas.width; x += size) {
+    gc.beginPath();
+    gc.moveTo(x, 0);
+    gc.lineTo(x, gridCanvas.height);
+    gc.stroke();
+  }
+
+  for (let y = -offset; y < gridCanvas.height; y += size) {
+    gc.beginPath();
+    gc.moveTo(0, y);
+    gc.lineTo(gridCanvas.width, y);
+    gc.stroke();
+  }
+
+  requestAnimationFrame(drawGrid);
+}
+
+drawGrid();
+
+/* ====== NAV CARD HOVER LOGIC ====== */
+const container = document.querySelector('.nav-cards-container');
+const cards = container.querySelectorAll('.nav-card');
+
+container.addEventListener('mouseenter', () => {
+  container.classList.add('hovered');
+});
+
+container.addEventListener('mouseleave', () => {
+  container.classList.remove('hovered');
+});
+</script>
 
 </body>
 </html>
