--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ html,body{height:100%;margin:0;padding:0;font-family:Inter,ui-sans-serif,system-
         <h3>Links</h3>
         <p>
           <span style="display:block; margin-bottom:8px;">GitHub – github.com/skilljava</span>
-          <span style="display:block; margin-bottom:8px;">Portfolio – skilljava.dev</span>
+          <span style="display:block; margin-bottom:8px;">Portfolio – skilljava.ir</span>
           <span style="display:block;">Discord Server – join for updates & community</span>
         </p>
       </div>
