--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ html,body{height:100%;margin:0;padding:0;font-family:Inter,ui-sans-serif,system-
 
   <div class="header-inner container">
     <div class="profile-glass">
-      <div class="avatar"><img src="https://cdn.discordapp.com/avatars/1275540868186636348/7383706214a2a719edf30d967c567f9d.png?size=1024" alt="skilljava avatar"></div>
+      <div class="avatar"><img src="https://cdn.discordapp.com/avatars/1275540868186636348/40ba6f6de4001fe4a2dbc3122874f109?size=1024" alt="skilljava avatar"></div>
       <div class="meta">
         <div class="name">@skilljava</div>
         <div class="subtitle">Java • Discord bots • Server & network development</div>
