--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>@skilljava</title>
 <link rel="icon" href="favicon.ico?v=2" type="image/x-icon">
+<!-- اضافه کردن فونت Ubuntu از Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
 <style>
 :root{
   --bg:#0b0b0b;
@@ -20,7 +22,7 @@
   --max-width: 1100px;
 }
 *{box-sizing:border-box;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
-html,body{height:100%;margin:0;padding:0;font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;background:var(--bg);color:var(--text);line-height:1.45;overflow-x:hidden;scroll-behavior:smooth;}
+html,body{height:100%;margin:0;padding:0;font-family:'Ubuntu',Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;background:var(--bg);color:var(--text);line-height:1.45;overflow-x:hidden;scroll-behavior:smooth;}
 .container{max-width:var(--max-width);margin:0 auto;padding:40px 20px;}
 .full-viewport{min-height:100vh;width:100%;display:flex;align-items:center;justify-content:center;position:relative;}
 .header{position:relative;width:100%;height:100vh;overflow:hidden;display:block;background: linear-gradient(180deg, rgba(20,8,8,0.76) 0%, rgba(12,6,6,0.88) 60%), linear-gradient(180deg, rgba(16,2,2,0.25), rgba(8,0,0,0.0));transition: opacity 0.9s cubic-bezier(.2,.9,.2,1), transform 0.9s cubic-bezier(.2,.9,.2,1);}
