--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>skilljava | Portfolio</title>
+    <title>@skilljava</title>
     
     <!-- Tailwind CSS (Using CDN for simplicity in build) -->
     <script src="https://cdn.tailwindcss.com"></script>
